# bike-sharing-demand-ml

./: app.py  feature_names.pkl  model.pkl  pyproject.toml  requirements.txt  train_model.py
templates/: index.html
